test/error/type/err4.rzy
type
  Weekday = Enum
    Monday;
    Tuesday;
    Wednesday;
    Thursday;
    Friday;
    Saturday;
    Sunday;
  end

component
  Err4

    implementation elementary

    function foo( x: Weekday )
      bar( x );
    end

    function bar( x: U{8} )
    end

  end

